# MedContext-impact

./: .env.docker  .env.example  .gitignore  AGENTIC_THRESHOLD_RECOMMENDATIONS.md  CLAUDE.md  CONFIGURATION.md  DEMO_SETUP_SUMMARY.md  DEPLOYMENT.md  DOCKER.md  DOCKER_FILES_CREATED.md  DOCKER_QUICKSTART.md  DOCKER_QUICK_REFERENCE.md  Dockerfile  FINAL_VALIDATION_RESULTS.md  IMPLEMENTATION_COMPLETE.md  Makefile  Medical Misinformation of Authentic Imaging A Comprehensive.md  NEXT_STEPS_FOR_VALIDATION.md  PHASE1_RESULTS.md  PHASE1_STATUS.md  PHASE2_GUIDE.md  PHASE2_STATUS.md  PROGRESS_TRACKER_2D_ENHANCEMENT.md  PROGRESS_TRACKER_FIX.md  PYTHON_CONFIG_SUMMARY.md  README.md  RERUN_VALIDATION.md  REVIEW_PRE_SUBMISSION.md  RUN_IN_CLOUD_SHELL.md  START_HERE.md  TESTING_DEPLOYMENT.md  THRESHOLD_CONFIGURATION_FEATURE.md  THRESHOLD_OPTIMIZATION.md  THRESHOLD_OPTIMIZATION_FEATURE.md  VALIDATION_DATA_INFORMATION.md  VALIDATION_RUN_PLAN.md  VALIDATION_STORY.md  VIDEO_SCRIPT_NUMBERS.md  alembic.ini  docker-compose.dev.yml  (+19 more)
alembic/: env.py
contracts/: MedicalProvenance.sol
demo_video/: README.md  SHOT_LIST.md  TALKING_POINTS.md  VIDEO_SCRIPT.md
docs/: AGENTIC_ARCHITECTURE.md  AGENTIC_WORKFLOW.md  Background-Image-provenance-technical-assessment.md  CATEGORY_NORMALIZATION_FIX.md  CATEGORY_NORMALIZATION_README.md  CATEGORY_NORMALIZATION_SUMMARY.md  COMPETITION_RULES.md  CONFIGURATION.md  CONTEXTUAL_SIGNALS_VALIDATION.md  CONTEXTUAL_SIGNALS_VALIDATION_QUICKSTART.md  CONTEXTUAL_VALIDATION_SUMMARY.md  DEMO_PROTECTION.md  DEMO_SETUP_SUMMARY.md  DEPLOYMENT.md  DOCKER_SETUP_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IS_MISINFORMATION_DECISION_LOGIC_FIX.md  JUSTIFICATION.md  LABELING_IMPROVEMENTS.md  METRICS_COMPUTATION_CLARIFICATION.md  METRICS_CORRECTION_SUMMARY.md  MODEL_CLARIFICATION.md  MedContext-Backend-Architecture.md  MedContext-Blockchain-Cleaned.md  MedContext-Cleaned.md  MedContext-Complete-TechSpec.md  MedContext-MedGemma-Claim-Extraction.md  OPTIMIZATION_STORY_CHANGES.md  SAMPLING_BIAS_ANALYSIS.md  SCALE_CALCULATION_FIXES.md  SOURCE_DISTRIBUTION_FIX.md  SOURCE_FIX_CHECKLIST.md  SOURCE_FIX_README.md  SOURCE_FIX_SUMMARY.md  STATISTIC_CORRECTION_87_PERCENT.md  SUBMISSION.md  SUBMISSION_SUMMARY.md  TEST_SET_CONTAMINATION_FIX.md  THRESHOLD_GRID_TRUNCATION_FIX.md  (+16 more)
interface/: README.md  app.js  index.html  styles.css
scripts/: README_VALIDATION.md  add_misleading_cases.py  add_misleading_examples.py  analytics_report.py  benchmark_performance.py  caddyfile_vps  check_deployment_status.sh  check_sampling_bias.py  check_vertex_endpoint.py  check_vps_paths.sh  cleanup_duplicate_records.py  compare_paired_predictions.py  create_3d_dataset.py  deploy_contract.py  deploy_frontend.sh  deploy_local.sh  deploy_simple.sh  deploy_to_vps.sh  deploy_vertex_medgemma.sh  dev.sh  docker_health_check.sh  download_med_mmhl.py  fix_chart_data_categories.py  fix_vps_dns.sh  generate_contextual_claims.py  generate_validation_charts.py  generate_validation_images.py  generate_validation_plots.py  monitor_validation.sh  optimize_thresholds.py  prepare_btd_mri_dataset.py  prepare_contextual_validation_dataset.py  prepare_uci_tamper_dataset.py  run_full_validation.sh  (+30 more)
(+288 files in other folders)
