[project]
name = "MedContext-impact"
version = "0.1.0"
description = "MedContext-impact leverages MedGemma to tackle the emerging issue of medical deepfakes."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jamie Forrest" }]
license = { text = "MIT" }
dependencies = [
  "fastapi==0.115.8",
  "uvicorn==0.34.0",
  "pydantic==2.12.0",
  "pydantic-settings==2.10.1",
  "SQLAlchemy==2.0.35",
  "python-multipart==0.0.21",
  "alembic==1.13.3",
  "httpx==0.28.1",
  "google-cloud-aiplatform>=1.105.0",
  "google-cloud-storage>=3.0.0",
  "langgraph==1.0.5",
  "pillow==11.1.0",
  "torch==2.9.1",
  "transformers==4.57.3",
  "accelerate>=1.12.0",
  "psycopg2-binary>=2.9.11",
  "praw>=7.8.1",
  "cachetools>=6.2.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
