[project]
name = "MedContext-impact"
version = "0.1.0"
description = "MedContext leverages Google's MedGemma model to assess medical image-claim pairs for context authenticity and image integrity."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jamie Forrest", email = "james.forrest@ubc.ca" }]
license = { text = "CC-BY-4.0" }
dependencies = [
  "fastapi==0.115.8",
  "uvicorn==0.34.0",
  "pydantic==2.12.0",
  "pydantic-settings==2.10.1",
  "SQLAlchemy==2.0.35",
  "python-multipart==0.0.21",
  "alembic==1.13.3",
  "httpx==0.28.1",
  "langgraph==1.0.5",
  "pillow==11.1.0",
  "c2pa-python",
  "psycopg2-binary>=2.9.11",
  "cachetools>=6.2.4",
  "huggingface-hub>=0.36.0",
  "google-search-results>=2.4.2",
  "python-telegram-bot>=22.6",
  "python-dotenv>=1.2.1",
  "numpy>=2.4.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
local = [
  # For local MedGemma inference (requires GPU)
  "torch>=2.9.0",
  "transformers>=4.57.0",
  "accelerate>=1.12.0",
]
vertex = [
  # For Vertex AI deployment
  "google-cloud-aiplatform>=1.105.0",
  "google-cloud-storage>=3.0.0",
]
blockchain = [
  # For blockchain provenance anchoring
  "web3>=6.15.0",
  "eth-account>=0.11.0",
  "py-solc-x>=2.0.2",
]
dicom = [
  # For DICOM image analysis
  "pydicom>=3.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.3.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
